# company-research-agent

./: .env.example  .gitignore  Makefile  README.es.md  README.fr.md  README.jp.md  README.kr.md  README.md  README.zh.md  SOUL.md  agent.yaml  pyproject.toml  requirements.txt  setup.sh  watsonx.ipynb
backend/: watsonx.ipynb
backend/nodes/: briefing.py  editor.py
backend/nodes/researchers/: base.py
ui/: package-lock.json  package.json
